# Paralel

./: .gitignore  CMakeLists.txt  gift.txt  overview.md
ulohy/1-povinna/: CMakeLists.txt
ulohy/1-povinna/include/: matrix.h
ulohy/1-povinna/src/: main_seq.cpp  main_tbb.cpp
ulohy/2-volitelna/: CMakeLists.txt
ulohy/2-volitelna/include/: image_filter.h  kmeans.h
ulohy/2-volitelna/src/: main_seq.cpp  main_tbb.cpp
ulohy/3-volitelna/: CMakeLists.txt  DiningPhilosophers.md
ulohy/3-volitelna/include/: dining.h  pipeline.h
ulohy/3-volitelna/src/: main_seq.cpp  main_tbb.cpp
